test/integration/bad/signature_sampling_reserved.stan
data {
  int x;
}
parameters {
  vector[4] theta;
}
model {
  x ~ extern(theta);
}
